testdata/zkc/invalid/basic_invalid_05.zkc
;;error:3:3-4:unknown register
function f(x:u8) -> (r:u8) {
  z = 0
  return
}
